--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@primevue/themes": "^4.2.3",
+    "@mdi/font": "^7.4.47",
+    "@primevue/themes": "^4.2.5",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "pinia": "^2.2.6",
-    "primevue": "^4.2.3",
+    "primevue": "^4.2.5",
     "vue": "^3.5.12",
-    "vue-router": "^4.4.5",
-    "vuetify": "^3.7.4"
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@primevue/auto-import-resolver": "^4.2.3",
@@ -37,6 +40,8 @@
     "unplugin-vue-components": "^0.27.4",
     "vite": "^5.4.10",
     "vite-plugin-vue-devtools": "^7.5.4",
-    "vue-tsc": "^2.1.10"
+    "vite-plugin-vuetify": "^2.0.4",
+    "vue-tsc": "^2.1.10",
+    "vuetify": "^3.7.6"
   }
 }
