--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "@fullcalendar/vue3": "^6.1.15",
     "@mdi/font": "^7.4.47",
     "@primevue/themes": "^4.2.5",
+    "@schedule-x/drag-and-drop": "^2.12.1",
+    "@schedule-x/event-modal": "^2.12.1",
+    "@schedule-x/events-service": "^2.12.1",
     "@schedule-x/theme-default": "^2.12.1",
+    "@schedule-x/theme-shadcn": "^2.12.1",
     "@schedule-x/vue": "^2.11.1",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
@@ -34,16 +38,20 @@
   },
   "devDependencies": {
     "@primevue/auto-import-resolver": "^4.2.3",
+    "@tailwindcss/forms": "^0.5.9",
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.9.0",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue/eslint-config-prettier": "^10.1.0",
     "@vue/eslint-config-typescript": "^14.1.3",
     "@vue/tsconfig": "^0.5.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^9.30.0",
     "npm-run-all2": "^7.0.1",
+    "postcss": "^8.4.49",
     "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.6.3",
     "unplugin-vue-components": "^0.27.4",
     "vite": "^5.4.10",
